--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "java",
+      "name": "FootballAplication",
+      "request": "launch",
+      "mainClass": "Lab4.FootballAplication",
+      "projectName": "UPF-POO23-G203-03_7386533c"
+    },
+    {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
