--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,21 +2,14 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "java",
-      "name": "FootballAplication",
-      "request": "launch",
-      "mainClass": "Lab4.FootballAplication",
-      "projectName": "UPF-POO23-G203-03_7386533c"
-    },
-    {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": ".",
-      "program": "build/Debug/outDebug",
+      "cwd": "c:/Users/pauno/OneDrive - estudiant.upf.edu/Documents/2n UNI/1r Trimestre/Programació Orientada a Objectes/Pràctica/Practica1/UPF-POO23-G203-03/Lab5",
+      "program": "c:/Users/pauno/OneDrive - estudiant.upf.edu/Documents/2n UNI/1r Trimestre/Programació Orientada a Objectes/Pràctica/Practica1/UPF-POO23-G203-03/Lab5/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
